Extend nodetool sstablerepairedset to affect all keyspaces when no keyspace is provided in args