@@ -22,6 +22,7 @@ import java.io.OutputStream;
 import java.io.PrintStream;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import org.junit.Before;
 import org.junit.Test;
@@ -35,6 +36,7 @@ import static org.mockito.ArgumentMatchers.anyBoolean;
 import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -46,56 +48,57 @@ public class SSTableRepairedSetTest
     private SSTableRepairedSet cmd;
 
     @Before
-    public void setUp()
-    {
+    public void setUp() {
         MockitoAnnotations.initMocks(this);
-        PrintStream noopStream = new PrintStream(new OutputStream()
-        {
-            @Override
-            public void write(int b)
-            {
-            }
-        });
+        PrintStream noopStream = new PrintStream(new OutputStream() {@Override public void write(int b) {}});
         when(probe.output()).thenReturn(new Output(noopStream, noopStream));
         cmd = new SSTableRepairedSet();
     }
 
     @Test
-    public void testNoKeyspace()
-    {
+    public void testNoKeyspace() {
+        when(probe.getNonLocalStrategyKeyspaces()).thenReturn(new ArrayList<>(List.of("ks1", "ks2")));
+        when(probe.getKeyspaces()).thenReturn(new ArrayList<>(List.of("ks1", "ks2")));
+        when(probe.getTablesForKeyspace("ks1")).thenReturn(new ArrayList<>(List.of("table1", "table2")));
+        when(probe.getTablesForKeyspace("ks2")).thenReturn(new ArrayList<>(List.of("table3", "table4")));
+        cmd.isRepaired = true;
+        cmd.reallySet = true;
+
+        cmd.execute(probe);
+
+        verify(probe, times(1)).mutateSSTableRepairedState(true, false, "ks1", List.of("table1", "table2"));
+        verify(probe, times(1)).mutateSSTableRepairedState(true, false, "ks2", List.of("table3", "table4"));
+    }
+
+    @Test
+    public void testBothRepairedAndUnrepaired() {
+        cmd.args = List.of("keyspace");
+        cmd.isRepaired = true;
+        cmd.isUnrepaired = true;
         cmd.execute(probe);
         verify(probe, never()).mutateSSTableRepairedState(anyBoolean(), anyBoolean(), anyString(), anyList());
     }
 
     @Test
-    public void testBothRepairedAndUnrepaired()
-    {
-        cmd.args = Arrays.asList("keyspace");
+    public void testNeitherRepairedNorUnrepaired() {
+        cmd.args = List.of("keyspace");
         cmd.execute(probe);
         verify(probe, never()).mutateSSTableRepairedState(anyBoolean(), anyBoolean(), anyString(), anyList());
     }
 
     @Test
-    public void testNeitherRepairedNorUnrepaired()
-    {
-        cmd.args = Arrays.asList("keyspace");
-        cmd.execute(probe);
-        verify(probe, never()).mutateSSTableRepairedState(anyBoolean(), anyBoolean(), anyString(), anyList());
-    }
-
-    @Test
-    public void testRepairedPreview()
-    {
-        cmd.args = Arrays.asList("keyspace");
+    public void testRepairedPreview() {
+        cmd.args = List.of("keyspace");
+        when(probe.getKeyspaces()).thenReturn(new ArrayList<>(List.of("keyspace")));
         cmd.isRepaired = true;
         cmd.execute(probe);
         verify(probe).mutateSSTableRepairedState(true, true, "keyspace", new ArrayList<>());
     }
 
     @Test
-    public void testUnrepairedReallySet()
-    {
-        cmd.args = Arrays.asList("keyspace");
+    public void testUnrepairedReallySet() {
+        cmd.args = List.of("keyspace");
+        when(probe.getKeyspaces()).thenReturn(new ArrayList<>(List.of("keyspace")));
         cmd.isUnrepaired = true;
         cmd.reallySet = true;
         cmd.execute(probe);
@@ -103,9 +106,9 @@ public class SSTableRepairedSetTest
     }
 
     @Test
-    public void testExecuteWithTableNames()
-    {
+    public void testExecuteWithTableNames() {
         cmd.args = Arrays.asList("keyspace", "table1", "table2");
+        when(probe.getKeyspaces()).thenReturn(new ArrayList<>(List.of("keyspace")));
         cmd.isRepaired = true;
         cmd.reallySet = true;
         cmd.execute(probe);
